--- a/slides/2025-04-02-javaland.md
+++ b/slides/2025-04-02-javaland.md
@@ -15,7 +15,7 @@ revealOptions:
 <h1 style="text-transform: none;">Coding Dojo: Die verschiedenen Schulen der TDD</h1>
 
 <p style="position: absolute; top: 530px; right: -145px; color: #ccc; text-transform: none; text-align: right" class="handles">
-  Marco Emrich - Falk Sippach
+  Falk Sippach - Marco Emrich
 </p>
 <br/><br/><br/><br/><br/><br/><br/>
 
